--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-tracking-transparency": "~3.0.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
